# Researcher.vX

./: .env.example  IMPLEMENTATION_SUMMARY.md  Implementation plan  README.md  pyproject.toml
examples/: basic_research.py
strataflow/: __init__.py  __main__.py
strataflow/agents/: __init__.py  research.py  synthesis.py  verification.py
strataflow/api/: __init__.py  server.py
strataflow/core/: __init__.py  base.py  config.py  protocols.py  state.py  types.py
strataflow/neural_symbolic/: __init__.py  fusion.py  ontology.py  semantic_parser.py
strataflow/orchestrator/: __init__.py  engine.py  provenance.py  resource_allocator.py  state_machine.py
strataflow/symbolic/: __init__.py  causal.py  temporal.py  verification.py
strataflow/verification/: __init__.py  pipeline.py
