[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strataflow"
version = "2.0.0"
description = "Neuro-Symbolic Research Engine with Deterministic Knowledge Synthesis"
authors = [{name = "StrataFlow Team"}]
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = [
    "neuro-symbolic", "knowledge-graphs", "causal-inference",
    "formal-verification", "research-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core Framework
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typing-extensions>=4.9.0",

    # Async & Concurrency
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",

    # API & Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "strawberry-graphql[fastapi]>=0.219.0",

    # Data Processing
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "torch>=2.1.0",
    "networkx>=3.2.0",

    # Graph Databases
    "neo4j>=5.15.0",
    "redis[hiredis]>=5.0.0",

    # Vector Databases
    "qdrant-client>=1.7.0",
    "pinecone-client>=3.0.0",

    # NLP & Transformers
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",

    # Symbolic AI & Logic
    "z3-solver>=4.12.0",
    "sympy>=1.12",
    "pyDatalog>=0.17.1",

    # Causal Inference
    "causalnex>=0.12.0",
    "dowhy>=0.10.0",
    "pgmpy>=0.1.23",

    # Knowledge Graphs & Ontologies
    "rdflib>=7.0.0",
    "owlready2>=0.45",

    # Probabilistic Programming
    "pyro-ppl>=1.8.6",
    "pymc>=5.10.0",

    # Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "structlog>=24.1.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",

    # Utilities
    "tenacity>=8.2.3",
    "cachetools>=5.3.2",
    "more-itertools>=10.1.0",
    "toolz>=0.12.0",
    "returns>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.92.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

quantum = [
    "qiskit>=0.45.0",
    "dwave-ocean-sdk>=6.7.0",
]

advanced-ml = [
    "torch-geometric>=2.4.0",
    "dgl>=1.1.0",
    "hypernetx>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["strataflow*"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=strataflow --cov-report=term-missing"
